# realsense2_description_px4

./: CMakeLists.txt  README.md  package.xml
clover_description/launch/: spawn_drone.launch
clover_description/urdf/clover/: clover4.xacro
launch/: gazebo.launch  view_d435_model.launch  view_d435_model_rviz_gazebo.launch
urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  test_d435_camera.urdf.xacro  test_d435_multiple_cameras.urdf.xacro
