<?xml version="1.0"?>
<package format="2">
  <name>realsense2_description_px4</name>
  <version>3.1.7</version>
  <description>RealSense Camera description package for Intel 3D D400 cameras</description>
  <maintainer email="ilyaholodilov19072002@gmail.com">Ilya Kholodilov</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://www.ros.org/wiki/RealSense</url>
  <url type="bugtracker">https://github.com/intel-ros/realsense/issues</url>
  <author email="ilyaholodilov19072002@gmail.com">Ilya Kholodilov</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
</package>
